--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^14.3.0",
     "@react-native-firebase/firestore": "^14.3.0",
     "@react-native-firebase/storage": "^14.3.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
@@ -26,6 +27,7 @@
     "react-native": "0.67.1",
     "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-image-picker": "^4.7.3",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
