--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^14.3.0",
     "@react-native-firebase/auth": "^14.3.0",
     "@react-native-firebase/firestore": "^14.3.0",
+    "@react-native-firebase/messaging": "^14.3.0",
     "@react-native-firebase/storage": "^14.3.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -22,12 +23,15 @@
     "@reduxjs/toolkit": "^1.7.1",
     "@types/react-native": "^0.66.15",
     "@types/styled-components": "^5.1.21",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-hook-form": "^7.25.0",
     "react-native": "0.67.1",
+    "react-native-contacts": "^7.0.3",
     "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-image-picker": "^4.7.3",
+    "react-native-permissions": "^3.2.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
@@ -40,6 +44,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^17.0.38",
+    "@types/styled-components-react-native": "^5.1.3",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
@@ -48,5 +53,8 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
