--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^14.3.0",
     "@react-native-firebase/auth": "^14.3.0",
     "@react-native-firebase/firestore": "^14.3.0",
-    "@react-native-firebase/messaging": "^14.3.0",
+    "@react-native-firebase/messaging": "^14.5.0",
     "@react-native-firebase/storage": "^14.3.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -33,6 +34,7 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-image-picker": "^4.7.3",
     "react-native-permissions": "^3.2.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
